# llamachat

./: .env  .gitignore  .python-version  Dockerfile  README.md  main.py  parameters.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: embeddings.html  header.html  settings.html  tts.html  whisper.html
backend/: README.md  llama-stack-config.yaml
libs/embeddings/: embeddings.py  vectorio.py
libs/rag/: client.py  embeddings.py  functions.py
libs/shared/: agent.py  huggingface.py  responses.py  session.py  settings.py  shields.py  state.py  utils.py
libs/utils/: audio_pipelines.py
notebooks/: audio_gen_test.ipynb  audio_io.py  docling-test.ipynb  docling_test.ipynb  torch-audio-test.ipynb  torch_audio_test.ipynb
notebooks/converted_files/: rfc2104.doctags  rfc2104.txt
notebooks/converted_files/.ipynb_checkpoints/: rfc2104-checkpoint.json  rfc2104-checkpoint.md
pages/: agentic_chat.py  ai_chat.py  embeddings.py  settings.py  tts_audio.py  whisper_audio.py
