[project]
name = "llamachat"
version = "0.1.1"
description = "Agentic AI Application, based on Llama-Stack. Now with additional features!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling==2.43.0",
    "ffmpeg>=1.4",
    "huggingface-hub>=0.34.4",
    "kokoro>=0.9.4",
    "llama-stack-client==0.2.23",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchcodec==0.7",
    "torchvision==0.23.0",
    "transformers>=4.55.0",
]
